--- a/DMH/index.html
+++ b/DMH/index.html
@@ -364,10 +364,10 @@
         <div class="row">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Corrugated Boxes</li>
-              <li data-filter=".filter-card">Corrugated Sheets/Rolls</li>
-              <li data-filter=".filter-web">Corrugated cartons</li>
+              <li data-filter="*" class="filter-active" id="aprd">All</li>
+              <li data-filter=".filter-app" id="cbx">Corrugated Boxes</li>
+              <li data-filter=".filter-card" id="cshrl">Corrugated Sheets/Rolls</li>
+              <li data-filter=".filter-web" id="ccr">Corrugated cartons</li>
             </ul>
           </div>
         </div>
@@ -803,23 +803,22 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Products</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#team">Our Team</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+            <h4>Our Products</h4>
+            <ul >
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">All</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Corrugated Boxes</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Corrugated Sheets/Rolls</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Corrugated cartons</a></li>
             </ul>
           </div>
 
